--- a/docker-compose.debug.yaml
+++ b/docker-compose.debug.yaml
@@ -8,19 +8,21 @@ services:
         - DEV=true
     ports:
       - "8000:8000"
+      - "5678:5678"
     volumes:
       - ./app:/app
       - todo-static-data:/vol/web
     command: >
       sh -c "python manage.py wait_for_db
              python manage.py migrate
-             python manage.py runserver 0.0.0.0:8000"
+             python -m debugpy --listen 0.0.0.0:5678 manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
       - DB_NAME=todo_db
       - DB_USER=todo_user
       - DB_PASS=todo_pass
       - DEBUG=1
+      - PYDEVD_DISABLE_FILE_VALIDATION=1
     depends_on:
       - db
 
