--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django>=4.2.7,<4.3
 djangorestframework>=3.14.0,<3.15
+djangorestframework-simplejwt>=5.3.1,<5.4
 psycopg2>=2.9.9,<2.10
 drf-spectacular>=0.26.5,<0.27
 Pillow>=10.1.0,<10.2
